@@ -78,6 +78,10 @@ void rollover_logfile(void);
 
 ///////////////////////////////////////////////////////
 
+int secure_username(u08bits *username);
+
+///////////////////////////////////////////////////////
+
 #ifdef __cplusplus
 }
 #endif
